...
    android:paddingBottom="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mitrokhin.nick.dialer.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/contactList"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:drawableLeft="@drawable/search"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:textColorHighlight="#6A82C5"
...
